; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_complete.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_complete(i32 %0, i8** %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.io, align 4
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i8**, i8*** %6, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i64 @io_exec(%struct.io* %9, i32 %10, i8* %11, i32* null, i8** %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %4
  %17 = call i64 @io_done(%struct.io* %9)
  %18 = icmp ne i64 %17, 0
  br label %19

19:                                               ; preds = %16, %4
  %20 = phi i1 [ false, %4 ], [ %18, %16 ]
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i64 @io_exec(%struct.io*, i32, i8*, i32*, i8**, i32) #1

declare dso_local i64 @io_done(%struct.io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
